# blackroad-os-pack-research-lab

./: .gitignore  BLACKROAD_AGENTS.md  CODEX_STATUS.md  CONTRIBUTING.md  Makefile  README.md  TODOS.md  br_lab.py  package-lock.json  package.json  pyproject.toml  railway.toml  requirements.txt  research_lab.env.example  verify-trinity-integration.sh
.github/workflows/: auto-deploy.yml  blackroad-agents.yml  ci.yml  deploy.yml  research-lab-ci.yml  todo-health-report.yml  todo-processor.yml
agents/: analyze_entropy.py  simulate_factor_tree.py
experiments/: prime_factor_tree.yml  ps_sha_entropy.yml
lib/: data_loader.py  plot_utils.py
notebooks/: prime_factor_tree_sim.ipynb  ps_sha_entropy_analysis.ipynb
public/: sig.beacon.json
scripts/: postbuild.py
src/: index.js
src/routes/: health.js
