[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.nbqa.mutate]
black = true
ruff = true

[tool.nbqa.config]
black = { line_length = 88 }
